--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://saloni375.github.io/newshub",
   "name": "newsapp",
   "version": "0.1.0",
   "private": true,
@@ -10,13 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-top-loading-bar": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
